# meshViewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  runtrace.sh
include/: mesh.h  model.h  renderer.h  shader.h
shader/fragment/: depth.fs  lighted_material.fs  lighted_micro_material.fs  lighting_map.fs  oneColorUniform.fs  uni.fs
shader/light/: light.vs
shader/vertex/: camera_normal.vs  camera_normal_texture.vs  identity.vs
src/: camera.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp
